--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
     <title>{{ page.title }}</title>
   </head>
   <body>
-     {{ content }}
+    <aside>test</aside>
+    <main>{{ content }}</main>
   </body>
 </html>
