--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Merriweather:400,400i,700|Nunito:400,400i,700&subset=latin-ext');
+
 *, *::before, *::after {
   margin: 0;
   padding: 0;
@@ -6,5 +8,17 @@
 
 body {
   box-sizing: border-box;
+  font-size: 100%;
+  font-family: "Merriweather", "Georgia", serif;
   color: red;
+}
+
+aside {
+}
+
+main {
+}
+
+h1, h2, h3 {
+  font-family: "Nunito", "Arial", sans-serif;
 }
