--- a/style.css
+++ b/style.css
@@ -14,9 +14,15 @@ body {
 }
 
 aside {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 20rem;
 }
 
 main {
+  margin-left: 20rem;
 }
 
 h1, h2, h3 {
