--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,14 @@
   </head>
   <body>
     <aside>test</aside>
-    <main>{{ content }}</main>
+    <main>
+      <ul>
+        {% for post in site.posts %}
+        <li>
+          <a href="{{ post.url }}">{{ post.title }}</a>
+        </li>
+        {% endfor %}
+      </ul>
+    </main>
   </body>
 </html>
