--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale:1.0">
-    <link rel="stylesheet" href={{ "style.css" | relative_url}}>
+    <link rel="stylesheet" href="{{ style.css | relative_url}}">
     <title>{{ page.title }}</title>
   </head>
   <body>
@@ -12,7 +12,7 @@
       <ul>
         {% for post in site.posts %}
         <li>
-          <a href="{{ post.url }}">{{ post.title }}</a>
+          <a href="{{ post.url | absolute_url }}">{{ post.title }}</a>
         </li>
         {% endfor %}
       </ul>
