--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,9 +7,7 @@
     <title>{{ page.title }}</title>
   </head>
   <body>
-    <aside>test</aside>
-    <main>
-      {{ content }}
-    </main>
+    Testtest
+    {{ content }}
   </body>
 </html>
