--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <title>{{ page.title }}</title>
   </head>
   <body>
-    <aside>test</aside>
+    <header>test</header>
     <main>
       <ul>
         {% for post in site.posts %}
