--- a/assets/style.css
+++ b/assets/style.css
@@ -30,6 +30,10 @@ h1, h2, h3 {
   font-family: "Nunito", "Arial", sans-serif;
 }
 
+.posts-list {
+  list-style: none;
+}
+
 @media only screen and (min-width: 992px) {
     header {
     position: fixed;
