--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
   <body>
     <header>test</header>
     <main>
-      <ul>
+      <ul class="posts-list">
         {% for post in site.posts %}
         <li>
           <a href="{{ post.url | absolute_url }}">{{ post.title }}</a>
