--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,13 @@
       <ul class="posts-list">
         {% for post in site.posts %}
         <li>
-          <img src="{{ post.image | relative_url }}">
-          <a href="{{ post.url | absolute_url }}">{{ post.title }}</a>
-          {{ post.excerpt }}
+          <div class="featured-image">
+            <img src="{{ post.image | relative_url }}">
+          </div>
+          <div class="post-description">
+            <a href="{{ post.url | absolute_url }}"><h2>{{ post.title }}</h2></a>
+            {{ post.excerpt }}
+          </div>
         </li>
         {% endfor %}
       </ul>
