--- a/assets/style.css
+++ b/assets/style.css
@@ -43,6 +43,16 @@ a, a:visited {
   list-style: none;
 }
 
+.posts-list li {
+  display: flex;
+  height: 300px;
+}
+
+.featured-image img {
+  max-width: 100%;
+  height: auto;
+}
+
 @media only screen and (min-width: 992px) {
     header {
     position: fixed;
