--- a/assets/style.css
+++ b/assets/style.css
@@ -63,6 +63,8 @@ a, a:visited {
 }
 
 .post-header {
+  position: initial;
+  width: 100%;
   height: 50vh;
   background-color: var(--main-blue);
 }
