--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,5 +13,10 @@
     <article class="post-content">
       {{ content }}
     </article>
+    <div class="post-chooser">
+      <div class="post-prev"></div>
+      <div class="post-next"></div>
+    </div>
+    <footer>&copy; 2018 Adrian Bugajewski | Wszelkie prawa zastrzeżone</footer>
   </body>
 </html>
