--- a/assets/style.css
+++ b/assets/style.css
@@ -45,6 +45,7 @@ a, a:visited {
 }
 
 .posts-list li {
+  width: 100%;
   display: flex;
   height: 15rem;
   margin-bottom: 1rem;
@@ -73,11 +74,11 @@ a, a:visited {
 }
 
 .post-content {
-  padding: 1rem;
+  padding: 0 2rem;
 }
 
 .post-chooser {
-  height: 20rem;
+  height: 10rem;
   background-color: var(--main-blue);
   display: flex;
 }
@@ -102,5 +103,9 @@ a, a:visited {
   .post-content {
     width: 960px;
     margin: 0 auto;
+  }
+
+  .post-chooser {
+    height: 20rem;
   }
 }
