--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,7 @@
 body {
   box-sizing: border-box;
   background-color: var(--main-white);
-  line-height: 1.6;
+  line-height: 1.7;
   color: var(--main-black);
   font-size: 100%;
   font-family: "Merriweather", "Georgia", serif;
@@ -29,6 +29,11 @@ header {
 
 main {
   padding: 1rem;
+}
+
+footer {
+  padding: 1rem;
+  text-align: center;
 }
 
 h1, h2, h3 {
@@ -75,6 +80,10 @@ a, a:visited {
 
 .post-content {
   padding: 2rem 0;
+}
+
+.post-content p {
+  margin-bottom: 2rem;
 }
 
 .post-chooser {
