--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale:1.0">
     <link rel="stylesheet" href={{ "assets/style.css" | relative_url}}>
+    <link rel="stylesheet" href={{ "assets/main.css" | relative_url}}>
     <title>{{ site.title }} | {{ page.title }}</title>
   </head>
   <body>
@@ -12,6 +13,7 @@
     </header>
     <article class="post-content">
       {{ content }}
+      <span class=".test">testtest</span>
     </article>
     <div class="post-chooser">
       <div class="post-prev"></div>
