--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@
     </header>
     <article class="post-content">
       {{ content }}
-      <span class=".test">testtest</span>
+      <span class="test">testtest</span>
     </article>
     <div class="post-chooser">
       <div class="post-prev"></div>
