--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,9 +17,9 @@
     </article>
     <div class="post-chooser">
       <div class="post-prev">
-        {% if post.previous.url %}
-          <a href="{{ post.previous.url }}">{{ post.previous.title }}</a>
-          <img src="{{ post.previous.image | relative_url }}">
+        {% if page.previous.url %}
+          <a href="{{ page.previous.url }}">{{ page.previous.title }}</a>
+          <img src="{{ page.previous.image | relative_url }}">
         {% endif %}
       </div>
       <div class="post-next">
