prev next update

--- a/assets/style.css
+++ b/assets/style.css
@@ -102,6 +102,9 @@ a, a:visited {
 
 .post-prev a, .post-next a {
   position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
   z-index: 1;
 }
 
@@ -109,6 +112,7 @@ a, a:visited {
   position: absolute;
   top: 0;
   left: 0;
+  opacity: 0.5;
   object-fit: cover;
   height: 100%;
   width: 100%;
