--- a/assets/style.css
+++ b/assets/style.css
@@ -62,6 +62,7 @@ a, a:visited {
 
 .featured-image img {
   object-fit: cover;
+  padding: 1rem;
   height: 100%;
   width: 100%;
 }
@@ -69,7 +70,7 @@ a, a:visited {
 .post-description {
   flex: 3;
   padding: 1rem;
-  margin: 1rem;
+  margin: 1rem 0;
   border-left: 1px solid var(--main-black);
 }
 
@@ -116,6 +117,10 @@ a, a:visited {
   object-fit: cover;
   height: 100%;
   width: 100%;
+}
+
+.post-prev a:hover .post-prev img {
+  opacity: 1;
 }
 
 @media only screen and (min-width: 992px) {
