--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,13 @@
     <title>{{ page.title }}</title>
   </head>
   <body>
-    <header>test</header>
+    <header>
+      <nav>
+        <ul class="main-nav">
+          <li><a href="about.html">O mnie</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <ul class="posts-list">
         {% for post in site.posts %}
