--- a/assets/style.css
+++ b/assets/style.css
@@ -45,6 +45,24 @@ a, a:visited {
   text-decoration: none;
 }
 
+.main-nav {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+}
+
+.main-nav li {
+  padding: 1rem;
+  width: 100%;
+}
+
+.main-nav li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
 .posts-list {
   list-style: none;
 }
@@ -119,7 +137,7 @@ a, a:visited {
   width: 100%;
 }
 
-.post-prev a:hover .post-prev img {
+.post-prev a:hover + img {
   opacity: 1;
 }
 
