usuniete niepotrzebny text, dodano transition dla prev/next

--- a/assets/style.css
+++ b/assets/style.css
@@ -135,9 +135,10 @@ a, a:visited {
   object-fit: cover;
   height: 100%;
   width: 100%;
+  transition: opacity 1s;
 }
 
-.post-prev a:hover + img {
+.post-prev a:hover + img, .post-next a:hover + img, {
   opacity: 1;
 }
 
