--- a/assets/style.css
+++ b/assets/style.css
@@ -125,7 +125,6 @@ a, a:visited {
   width: 100%;
   height: 100%;
   z-index: 1;
-  transition: opacity 1s;
 }
 
 .post-prev img, .post-next img{
@@ -136,6 +135,9 @@ a, a:visited {
   object-fit: cover;
   height: 100%;
   width: 100%;
+}
+
+.post-prev a + img {
   transition: opacity 1s;
 }
 
