--- a/assets/style.css
+++ b/assets/style.css
@@ -27,10 +27,6 @@ header {
   width: 100%;
 }
 
-main {
-  padding: 1rem;
-}
-
 footer {
   padding: 1rem;
   text-align: center;
@@ -76,18 +72,25 @@ a, a:visited {
 
 .featured-image {
   flex: 1;
+  background-color: var(--main-blue);
 }
 
 .featured-image img {
   object-fit: cover;
-  padding: 1rem;
+  opacity: 0.5;
+  padding: 1rem 2rem;
   height: 100%;
   width: 100%;
+  transition: opacity 1s;
+}
+
+.featured-image img:hover {
+  opacity: 1;
 }
 
 .post-description {
   flex: 3;
-  padding: 1rem;
+  padding: 1rem 2rem;
   margin: 1rem 0;
   border-left: 1px solid var(--main-black);
 }
