--- a/assets/style.css
+++ b/assets/style.css
@@ -77,7 +77,7 @@ a, a:visited {
 .featured-image img {
   object-fit: cover;
   opacity: 0.5;
-  padding: 1rem 2rem;
+  padding: 1rem;
   height: 100%;
   width: 100%;
   transition: opacity 1s;
