--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header class="post-header">
+      <img src="{{ page.image }}">
       <h1>{{ page.title }}</h1>
     </header>
     <article class="post-content">
