--- a/assets/style.css
+++ b/assets/style.css
@@ -64,34 +64,26 @@ a, a:visited {
 }
 
 .posts-list li {
+  position: relative;
   width: 100%;
   display: flex;
   height: 15rem;
   margin-bottom: 1rem;
 }
 
-.featured-image {
-  flex: 1;
-}
-
-.featured-image img {
-  object-fit: cover;
-  opacity: 0.5;
-  padding: 1rem;
-  height: 100%;
+.posts-list li img {
+  position: absolute;
+  left: 0;
+  top: 0;
   width: 100%;
-  transition: opacity 1s;
-}
-
-.featured-image img:hover {
-  opacity: 1;
+  height: 100%;
+  opacity: 0.5;
+  object-fit: cover;
 }
 
 .post-description {
-  flex: 3;
-  padding: 1rem 2rem;
-  margin: 1rem 0;
-  border-left: 1px solid var(--main-black);
+  position: relative;
+  z-index: 1;
 }
 
 .post-header {
@@ -99,6 +91,12 @@ a, a:visited {
   width: 100%;
   height: 50vh;
   background-color: var(--main-blue);
+}
+
+.post-header img{
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
 }
 
 .post-content {
