--- a/assets/style.css
+++ b/assets/style.css
@@ -68,6 +68,7 @@ a, a:visited {
   width: 100%;
   display: flex;
   height: 15rem;
+  padding: 1rem;
   margin-bottom: 1rem;
 }
 
@@ -77,7 +78,7 @@ a, a:visited {
   top: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.5;
+  opacity: 0;
   object-fit: cover;
   transition: opacity 1s;
 }
