--- a/assets/style.css
+++ b/assets/style.css
@@ -79,6 +79,7 @@ a, a:visited {
   width: 100%;
   height: 100%;
   opacity: 0;
+  padding: 1rem;
   object-fit: cover;
   transition: opacity 1s;
 }
