--- a/assets/style.css
+++ b/assets/style.css
@@ -69,7 +69,6 @@ a, a:visited {
   display: flex;
   height: 15rem;
   padding: 1rem;
-  margin-bottom: 1rem;
 }
 
 .posts-list li img {
@@ -81,6 +80,7 @@ a, a:visited {
   opacity: 0;
   padding: 1rem;
   object-fit: cover;
+  border-radius: 0.5rem;
   transition: opacity 1s;
 }
 
