--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="post-header">
-      <img src="{{ page.image }}">
+      <img src="{{ page.image | relative_url}}">
       <h1>{{ page.title }}</h1>
     </header>
     <article class="post-content">
