--- a/assets/style.css
+++ b/assets/style.css
@@ -95,7 +95,7 @@ a, a:visited {
 }
 
 .post-header {
-  position: initial;
+  position: relative;
   width: 100%;
   height: 50vh;
   background-color: var(--main-blue);
@@ -103,6 +103,9 @@ a, a:visited {
 
 .post-header img{
   object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
   height: 100%;
   width: 100%;
 }
