--- a/assets/style.css
+++ b/assets/style.css
@@ -102,6 +102,7 @@ a, a:visited {
 }
 
 .post-header h1 {
+  position: relative;
   z-index: 1;
 }
 
@@ -135,7 +136,8 @@ a, a:visited {
 
 .post-prev a, .post-next a {
   position: relative;
-  display: block;
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   z-index: 1;
