--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,8 @@
         {% for post in site.posts %}
         <li>
           <div class="post-description">
-            <a href="{{ post.url | absolute_url }}"><h2>{{ post.title }}</h2></a>
+            <a href="{{ post.url | absolute_url }}">
+              <h2>{{ post.title }}</h2></a>
             {{ post.excerpt }}
           </div>
           <img src="{{ post.image | relative_url }}">
