--- a/assets/style.css
+++ b/assets/style.css
@@ -145,6 +145,7 @@ a, a:visited {
 .post-prev, .post-next {
   position: relative;
   flex: 1;
+  overflow: hidden;
 }
 
 .post-prev a, .post-next a {
@@ -170,7 +171,7 @@ a, a:visited {
   object-fit: cover;
   height: 100%;
   width: 100%;
-  transition: opacity 1s; transform 1s;
+  transition: opacity 1s, transform 1s;
 }
 
 .post-prev a:hover + img, .post-next a:hover + img {
