--- a/assets/style.css
+++ b/assets/style.css
@@ -111,6 +111,10 @@ a, a:visited {
   position: relative;
   width: 100%;
   height: 50vh;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding: 2rem;
   background-color: var(--main-blue);
 }
 
