--- a/assets/style.css
+++ b/assets/style.css
@@ -80,7 +80,7 @@ a, a:visited {
   position: relative;
   width: 100%;
   display: flex;
-  height: 15rem;
+  min-height: 15rem;
   padding: 1rem;
 }
 
@@ -152,6 +152,8 @@ a, a:visited {
 }
 
 .post-content {
+  width: 90%;
+  max-width: 960px;
   padding: 2rem 0;
 }
 
@@ -215,7 +217,6 @@ a, a:visited {
   }
 
   .post-content {
-    width: 960px;
     margin: 0 auto;
   }
 }
