--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,9 @@
     <title>{{ site.title }} | {{ page.title }}</title>
   </head>
   <body>
+    <nav class="post-navigation">
+      <a href="{{index.html | relative_url}}"><img src="{{ "assets/img/home.svg" | relative_url}}"></a>
+    </nav>
     <header class="post-header">
       <h1>{{ page.title }}</h1>
       <img src="{{ page.image | relative_url}}">
