--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <nav class="post-navigation">
-      <a href="{{ index.html | relative_url }}"><img src="{{ "assets/img/home.svg" | relative_url }}"></a>
+      <a href="{{ "index.html" | relative_url }}"><img src="{{ "assets/img/home.svg" | relative_url }}"></a>
     </nav>
     <header class="post-header">
       <h1>{{ page.title }}</h1>
